# px4-firmware

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Kconfig  px4io-registers-annotated.txt  test_voxl_px4_reboot.sh
ROMFS/px4fmu_common/init.d/: CMakeLists.txt  fpv_airframes_rev0.parm  rc.interface  rcS  ums_airframes_rev0.parm  ums_airframes_revB.parm  ums_estimation_and_control_vio_pos_hold.parm  ums_flight_controllers_voxl2.parm
ROMFS/px4fmu_common/init.d-posix/: rcS
ROMFS/px4fmu_common/mixers/: quad_fpv.main.mix
Tools/astyle/: check_code_style_all.sh  files_to_check_code_style.sh
Tools/ecl_ekf/: analyse_logdata_ekf.py
Tools/msg/: px_generate_uorb_topic_files.py
boards/modalai/fc-v1/: default.px4board
boards/modalai/fc-v2/: default.px4board
boards/modalai/rb5-flight/: PRIORITIES.md  default.cmake  install-voxl.sh  mavlink-on-dsp.txt  qurt.cmake  raw-mag.txt  setup-alias.sh  used-parameters.txt  voxl-px4  voxl-px4-set-default-parameters.config  voxl-px4.config
boards/modalai/sitl/: ctrlalloc.cmake  default.cmake  default.px4board
boards/modalai/voxl2/: README.md  default.px4board  qurt.px4board  tree-v10.txt  tree-v11.txt  tree-v7.txt  tree-v8.txt  tree-v9.txt  voxl-px4  voxl-px4.config
boards/modalai/voxl2-slpi/: default.px4board
boards/px4/sitl/: default.px4board
cmake/: kconfig.cmake  px4_add_common_flags.cmake  px4_add_library.cmake  px4_add_module.cmake
msg/: CMakeLists.txt  Cpuload.msg  CrsfRaw.msg  FailsafeFlags.msg  HilSensorImu.msg  HilSensorMagBaro.msg  ParamGetRequest.msg  ParamGetRetval.msg  ParameterRequest.msg  ParameterValue.msg  SensorGyro.msg  VfcStatus.msg  actuator_outputs.msg  commander_state.msg  esc_report.msg  mavlink_msg.msg  telemetry_status.msg  vehicle_command.msg  vehicle_status.msg  vehicle_status_flags.msg
msg/tools/: uorb_rtps_message_ids.yaml
msg/versioned/: BatteryStatus.msg
src/drivers/: drv_hrt.h  drv_sensor.h
src/drivers/barometer/: Kconfig
src/drivers/gps/: gps.cpp  gps_metadata_monitor.cpp  gps_metadata_monitor.h  params.c
src/drivers/magnetometer/: Kconfig
src/drivers/px4io/: px4io.cpp  px4io_serial.cpp
src/include/: visibility.h
src/lib/: CMakeLists.txt
src/modules/mavlink/: CMakeLists.txt  mavlink_command_sender.cpp  mavlink_command_sender.h  mavlink_ftp.cpp  mavlink_ftp.h  mavlink_log_handler.cpp  mavlink_main.cpp  mavlink_main.h  mavlink_messages.cpp  mavlink_mission.cpp  mavlink_parameters.cpp  mavlink_params.c  mavlink_receiver.cpp  mavlink_receiver.h  mavlink_stream.h  mavlink_timesync.cpp  tune_publisher.cpp  tune_publisher.h
src/modules/mavlink/mavlink_tests/: mavlink_ftp_test.cpp
src/modules/mavlink/streams/: ACTUATOR_OUTPUT_STATUS.hpp  ALTITUDE.hpp  ATTITUDE.hpp  ATTITUDE_QUATERNION.hpp  ATTITUDE_TARGET.hpp  COLLISION.hpp  COMPONENT_INFORMATION.hpp  DEBUG.hpp  DEBUG_FLOAT_ARRAY.hpp  DEBUG_VECT.hpp  DISTANCE_SENSOR.hpp  ESC_INFO.hpp  ESC_STATUS.hpp  EXTENDED_SYS_STATE.hpp  FLIGHT_INFORMATION.hpp  GLOBAL_POSITION_INT.hpp  GPS_GLOBAL_ORIGIN.hpp  GPS_STATUS.hpp  HIGH_LATENCY2.hpp  HIL_ACTUATOR_CONTROLS.hpp  HIL_STATE_QUATERNION.hpp  LINK_NODE_STATUS.hpp  MANUAL_CONTROL.hpp  MOUNT_ORIENTATION.hpp  NAMED_VALUE_FLOAT.hpp  NAV_CONTROLLER_OUTPUT.hpp  OBSTACLE_DISTANCE.hpp  OPEN_DRONE_ID_BASIC_ID.hpp  OPEN_DRONE_ID_LOCATION.hpp  OPTICAL_FLOW_RAD.hpp  ORBIT_EXECUTION_STATUS.hpp  PING.hpp  POSITION_TARGET_GLOBAL_INT.hpp  POSITION_TARGET_LOCAL_NED.hpp  RAW_RPM.hpp  RC_CHANNELS.hpp  STATUSTEXT.hpp  STORAGE_INFORMATION.hpp  SYS_STATUS.hpp  TRAJECTORY_REPRESENTATION_WAYPOINTS.hpp  (+1 more)
validation/: module_schema.yaml
(+439 files in other folders)
